# SchemaForm

./: LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  THIRD_PARTY_NOTICES.md  main.py  pyproject.toml
src/schemaform/: app.py  auth.py  calculated.py  cli.py  config.py  fields.py  file_formats.py  file_signing.py  filters.py  master.py  models.py  protocols.py  repo_json.py  repo_sqlite.py  schema.py  webhook.py
src/schemaform/routes/: admin.py  admin_groups.py  api.py  auth.py  public.py  submissions.py  user.py
static/: form.css  form.js
templates/: _file_preview.html  _form_field.html  account.html  account_password.html  admin_form_builder.html  admin_forms.html  admin_group_detail.html  admin_groups.html  base.html  form_public.html  forms.html  login.html  signup.html  submission_done.html  submission_edit.html  submissions.html  user_submissions.html
templates/fields/: _layout.html  boolean.html  calculated.html  datetime.html  enum.html  file.html  group.html  integer.html  master.html  number.html  string.html
