[project]
name = "jsonschemaform"
version = "0.1.0"
description = "フォーム作成・収集サービス"
readme = "README.md"
requires-python = ">=3.12.10"
license = { text = "MIT OR Apache-2.0" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "jsonschema>=4.22.0",
    "sqlalchemy>=2.0.30",
    "aiosqlite>=0.20.0",
    "tinydb>=4.8.0",
    "filelock>=3.14.0",
    "orjson>=3.10.0",
    "ulid-py>=1.1.0",
    "typer>=0.12.0",
]
